fixed menu and sections on small device

--- a/src/components/header/menu-list.styles.css
+++ b/src/components/header/menu-list.styles.css
@@ -6,30 +6,22 @@
 
 @media (max-width: 990.98px) {
   .navbar-collapse {
+    z-index: 1040;
+    width: 100%;
     top: 61px;
   }
 
   .menu-list {
     position: absolute;
-    top: 159px;
-    left: -2%;
+    top: 105.2px;
+    left: 3.2%;
     z-index: 1050;
-  }
-}
-
-@media (max-width: 780.98px) {
-  .navbar-collapse {
-    top: 71px;
-  }
-
-  .menu-list {
-    top: 116px;
-    left: -2%;
   }
 }
 
 @media (max-width: 550.98px) {
   .menu-list {
-    top: 145px;
+    top: 132.4px;
+    left: 0;
   }
 }
